# gst-c-crash

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  meson.build  meson_options.txt
gst/: gstcrash.c  gstfaulty.c  gstfaulty.h  gstleaky.c  gstleaky.h  meson.build
hooks/: pre-commit.hook
pkgconfig/: gstreamer-crash.pc.in  meson.build
tests/: conftest.py  test_0.py  test_faulty.py  test_leaky.py
